setting agenda speakers
